# cir-duplicate-detector

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: automatic_versioning_and_publishing.yaml  tests.yaml
cir_duplicate_detector/: __init__.py  pdq_hash.py  pdq_hash_bk_tree.py  pdq_hash_dup_detect.py  url.py  utils.py
cir_duplicate_detector/pdq_dup_detect_algorithms/: bk_tree.py  multi_index_hashing.py  naive_duplicate_detector.py  pandas.py  utils.py
tests/: conftest.py
tests/integration/: test_large_duplicate_detection.py
tests/unit/: conftest.py  test_duplicate_detection.py  test_pdq_hash.py  test_url.py  test_utils.py
